* Fix sonar warnings * Fix conflicting sonar rule regarding formatting * Add source/target info to compiler-plugin for IntelliJ